implement opt-in for third-party AI setting